- Add Google login - Add logout - Add refresh token ability to stay logged in
